--- a/app.json
+++ b/app.json
@@ -35,11 +35,11 @@
     },
     "START_MESSAGE": {
       "description": "Optional: start message of bot, use HTML parsemode format",
-      "value": "Hey {first}\n\nI can store private files in Specified Channel and other users can access it using a special link."
+      "value": "Hey {first} 👋\n\n@SinhalaCartoonsSL. 🚀"
     },
     "FORCE_SUB_MESSAGE": {
       "description": "Optional: Force Sub message of bot, use HTML parsemode format",
-      "value": "Hello {first}\n\n<b>You need to join in my Channel/Group to use me\n\nKindly Please join Channel</b>"
+      "value": "🌼 Hello {first} 👋\n\n<b>You need to join in my Channel to use me\n\nKindly Please join Channel.🚀</b>"
     },
     "ADMINS": {
       "description": "A space separated list of user_ids of Admins, they can only create links",
